# velo2cam_calibration

./: .gitignore  CITATION.cff  CMakeLists.txt  HOWTO.md  README.md  package.xml
cfg/: Camera.cfg  Laser.cfg  Lidar.cfg  Monocular.cfg  Plane.cfg  Stereo.cfg
include/: velo2cam_utils.h
launch/: fake_tf.launch  full_calibration.launch  laser_pattern.launch  levinson.launch  levinson_edges.launch  lidar_pattern.launch  mono_pattern.launch  pass_test.launch  pcl_coloring.launch  pcl_projection.launch  real_laser_pattern.launch  real_stereo_pattern.launch  registration.launch  stereo_pattern.launch  velo2cam_calibration.launch  velo2cam_mono_calibration.launch
msg/: ClusterCentroids.msg
src/: disp_masker.cpp  laser_pattern.cpp  levinson.cpp  lidar_pattern.cpp  mono_qr_pattern.cpp  pcl_coloring.cpp  pcl_projection.cpp  plane.cpp  stereo_pattern.cpp  velo2cam_calibration.cpp
